--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ title: Cyril MOINEAU
 			<div class="box" style="margin: 1em;">
 				<h2>Currently</h2>
 				<p>
-					I am working at the <a href="http://www-list.cea.fr/en/">CEA</a>, a company at the cutting edge of technological research and development, as a research ingeenier in the domain of machine learning.
+					I am working at the <a href="http://www-list.cea.fr/en/">CEA</a>, a company at the cutting edge of technological research and development, as a research engineer in the domain of machine learning.
 				</p>
 			</div>
 		</div>
