--- a/project/index.html
+++ b/project/index.html
@@ -12,12 +12,12 @@ title: Cyril MOINEAU
 	<div class="box">
     	<h2 id="Ada">Ada Lovelace & Hacakthon ENSSAT (2019)</h2>
     		<p>
-    			During my 2nd year at <a href="http://www.enssat.fr/">ENSSAT</a>, I worked on two projects with the same team of students. These projects revolved around fulfilling a challenge in programming. Bellow, you will find a description of both projects followed by an explanation of my part in them.
+    			During my 2nd year at <a href="http://www.enssat.fr/">ENSSAT</a>, I worked on two projects with the same team of students. These projects revolved around fulfilling a challenge in programming. Bellow, you will find a description of both projects.
     		</p>
 
 	    	<h3>Description of the project Ada Lovelace :</h3>
 	    		<p>
-	    			<a href="https://adalovelace.ledantec-numerique.fr/">The Ada Lovelace challenge</a> is a computer science challenge in which high-school girls have to create a web site about a topic in a group of 4-5.
+	    			<a href="https://adalovelace.ledantec-numerique.fr/">The Ada Lovelace challenge</a> is a coding challenge in which high-school girls have to create a web site about a topic in a group of 4-5.
 	    			This project aims at promoting the place of women in the numeric world, which mostly represented by men as shown by statistics :
 	    		</p>
 
