--- a/work_experiences/fr/index.html
+++ b/work_experiences/fr/index.html
@@ -68,7 +68,7 @@ title: Cyril MOINEAU
 				Enfin, j'ai utilisé <a href="https://www.docker.com/">Docker</a> et <a href="https://flask.palletsprojects.com/en/1.1.x/">Flask</a> afin de créer une API dockerisée pour qu'il soit plus facile de reprendre le travail que j'ai réalisé en stage.
 			</p>
 
-			<h3>Conclusion :</h3>
+			<h3>Expérience acquise :</h3>
 			<p>
 				Ce stage m'a permis d'améliorer mes capacités de lecture et de synthèse d'articles scientifiques. 
 				Il s'est déroulé majoritairement à distance à cause de l'épidémie de COVID-19. 
@@ -97,7 +97,7 @@ title: Cyril MOINEAU
     			Tout au long de ces 2 mois, j'ai travaillé sur la détection d'émotions en utilisant les signaux ECG (électrocardiogramme) et PPG (photoplethysmogramme). Pour cela, j'ai utilisé un CNN (Réseau de neurones par convolution) avec la librairie <a href="https://keras.io/">Keras</a> (v2.24). J'ai aussi pu travailler sur des problèmatiques telles que la détection de pics et l'implémentation d'un système temps réel. En effet, l'objectif final du stage était d'implémenter le CNN sur la carte <a href="https://developer.nvidia.com/embedded/jetson-nano-developer-kit">JetSon Nano</a> de NVIDIA. 
     		</p>
 
-    		<h3>Conclusion :</h3>
+    		<h3>Expérience acquise :</h3>
     		<p>
 				Ce stage a été riche en expériences et fut une découverte du monde de la recherche très positive. 
 				Je ne pourrais pas suffisament remercier les personnes qui m'ont accueilli à la NCTU et qui m'ont permis de passer deux mois très bénéfiques. 
@@ -127,7 +127,7 @@ title: Cyril MOINEAU
 			<p>
     			2. Gestion de l'Active Directory (AD). L'AD était composé d'utilisateurs qui n'avaient pas été supprimés. Ce projet était très intéressant puisque je devais trouver un faisceau d'indices me permettant de discriminer les utilisateurs actifs des inactifs. Pour cela j'ai développé des scripts Power Shell.
     		</p>
-    		<h3>Conclusion :</h3>
+    		<h3>Expérience acquise :</h3>
     		<p>
 				Ce fut mon premier stage technique, il m'a permis de découvrir beaucoup dans le domaine de la gestion de réseaux et de découvrir le monde du travail. 
 				On m'a par ailleurs donné de nombreuses responsabilités, notamment lors du nettoyage de l'Active Directory. 
