--- a/work_experiences/index.html
+++ b/work_experiences/index.html
@@ -54,7 +54,7 @@ title: Cyril MOINEAU
 				The goal of the internship was to improve a method to generate linguistic summaries of a big database.
 				A linguistic summary is a set of fuzzy properties such as "most crow are black".
 				To generate such a summary, the classic approach requires to go through the whole database, which results in a linear complexity depending of the size of the database. 
-				The complexity is also exponential depending of the size of the vocabulary. 
+				The complexity is also exponential depending on the size of the vocabulary. 
 			</p>
 			<p>
 				The team <a href="http://www-shaman.irisa.fr/">SHAMAN</a> had written two papers for a method that uses metadata which are stored in the database management system.
@@ -67,10 +67,10 @@ title: Cyril MOINEAU
 				In order to make it easy to carry on with my work, I created a dockerized API using <a href="https://www.docker.com/">Docker</a> and <a href="https://flask.palletsprojects.com/en/1.1.x/">Flask</a> before ending my internship.
 			</p>
 
-			<h3>Conclusion :</h3>
+			<h3>Main Takeaways :</h3>
 			<p>
 				This internship has allowed me to improve my scientific papers reading and analyzing skills.
-				Due to the COVID-19 epidemy, I had to work mostly from home. This gave me the opportunity to develop my autonomy and to telecommute for the first time.
+				Due to the COVID-19 pandemy, I had to work mostly from home. This gave me the opportunity to develop my autonomy and to telework for the first time.
 				I have also discovered some underlying problematics of the reasearch world, such as the reproductiblity of the results of scientific papers.
 			</p>
 		</div>
@@ -94,12 +94,12 @@ title: Cyril MOINEAU
 			</p>
 
 			<p>
-				During these 2 months, I have worked on detecting emotion using ECG (Electrocardiogram) and PPG (Photoplethysmogram) signals. For this I used CNN (convolutional neuronnal network) with the library <a href="https://keras.io/">Keras</a> (v2.24). This also made me work on issues such as peak detection and real time implementation. Indeed, at the end of the internship I had to implement my CNN on the <a href="https://developer.nvidia.com/embedded/jetson-nano-developer-kit">JetSon Nano board</a>. 
+				During these 2 months, I have worked on detecting emotion using ECG (Electrocardiogram) and PPG (Photoplethysmogram) signals. For this I used a Convolutional Neuronnal Network (CNN) with the library <a href="https://keras.io/">Keras</a> (v2.24). This also made me work on issues such as peak detection and real time implementation. Indeed, at the end of the internship I had to implement my CNN on the <a href="https://developer.nvidia.com/embedded/jetson-nano-developer-kit">JetSon Nano board</a>. 
 			</p>
 			
-			<h3>Conclusion :</h3>
+			<h3>Main Takeaways :</h3>
 			<p>
-				This internship was a very good first experience of the world of research. I can't thank enough the people that welcomed me at the NCTU and made these two months such a beneficial experience. I have been able to understand the difficulties related to working in a research laboratory. Even if the thematic was not in the scope of what I have done at school, I was really eager to learn. These two months confirmed my desire to do research.
+				This internship was a very good first research experience. I can't thank enough the people that welcomed me at the NCTU and made these two months such a beneficial experience. I have been able to understand the difficulties related to working in a research laboratory. Even if the thematic was not in the scope of what I have done at school, I was really eager to learn. These two months confirmed my desire to do research.
 			</p>
 		</div>
 		<div class="box">
@@ -124,11 +124,9 @@ title: Cyril MOINEAU
 				<li> Management of the Active Directory (AD). The AD of the metropole had a lot of users who were supposed to be gone. My work was to found these users and to remove them. This project was really interresting since I had to create a way to detect users who aren't supposed to have an active directory with the information given by the AD. For this I used Power Shell script.
 				</li>
 			</ol>
-			<h3>Conclusion :</h3>
+			<h3>Main Takeaways :</h3>
 			<p>
-				This was my first technical internship. I have learnt a lot, and I was given responsabilities. Most particularly for the cleaning of the AD, where a mistake could have lead to the supression of a worker's account.  
-					This was my first technical internship. I have learnt a lot, and I was given responsabilities. Most particularly for the cleaning of the AD, where a mistake could have lead to the supression of a worker's account.  
-				This was my first technical internship. I have learnt a lot, and I was given responsabilities. Most particularly for the cleaning of the AD, where a mistake could have lead to the supression of a worker's account.  
+				This was my first technical internship. I have learnt a lot, and I was given responsabilities. Most particularly for the cleaning of the AD, where a mistake could have lead to the supression of a worker's account.
 			</p>
 		</div>
 	</div><!-- /.blurb -->
