--- a/fr/index.html
+++ b/fr/index.html
@@ -25,21 +25,62 @@ title: Cyril MOINEAU
 		</div>
 
 		<h2>Formation</h2>
+
+		<p>
+			J'ai suivi le parcours classique pour devenir ingénieur, en faisant une classe préparatoire aux grandes écoles et en entrant dans une école d'ingénieur.
+			Je me suis spécializé dans le domaine de l'analyse de données, l'IA et la recherche.
+			Grâce à mon parcours, j'atteste de solide connaissance sur différents sujets ce qui fait ma flexibilité en tnat qu'ingénieur.
+			</p>
 		<h3><a href="https://www.univ-rennes1.fr/"><img src="/ressources/logo_ur1.png" style="height: 2em; width: 5em; margin-right: 0.5em;"></a>
-		Master Recherche en informatique Rennes 1 (2019-2020)
-		<i id="1_show" class="fa fa-arrow-circle-down" aria-hidden="true" onclick="document.getElementById('msif').style.display='block';document.getElementById('1_hide').style.display='initial';document.getElementById('1_show').style.display='none';"></i> 
-		<i id="1_hide" class="fa fa-arrow-circle-up" aria-hidden="true" onclick="document.getElementById('msif').style.display='none';document.getElementById('1_hide').style.display='none';document.getElementById('1_show').style.display='initial';" style="display:none;"></i></h3>
+		Master Recherche en informatique Rennes 1 (2019-2020)</h3>
+
+		<p>
+		J'ai suivi la formation double diplôme de mon cursus d'ingénieur afin d'obtenir un diplôme de recherche en informatique.
+		Pendant cette formation, j'ai suivis des colloques sur "comment écrire un article scientifique", "la crise de la reproductibilité" etc ...
+		</p><p>
+			Ce diplôme en parallèle de ma formation d'ingénieur en informatique m'a permis d'avoir des cours plus pointu dans le domaine de la fouille de donnée.
+		</p>
+
+		<h4 style="text-align: center;">Liste des cours suivis
+		<i id="1_show" class="fa fa-arrow-circle-down" aria-hidden="true" style="margin-left: 0.5em; cursor:pointer;"
+		title="Cliquez pour voir la liste des cours"
+		onclick="document.getElementById('msif').style.display='block';
+				 document.getElementById('1_hide').style.display='initial';
+				 document.getElementById('1_show').style.display='none';"></i> 
+		<i id="1_hide" class="fa fa-arrow-circle-up" aria-hidden="true" style="display:none; margin-left: 0.5em; cursor:pointer;"
+		title="Cliquez pour cacher la liste des cours"
+		onclick="document.getElementById('msif').style.display='none';
+				 document.getElementById('1_hide').style.display='none';
+				 document.getElementById('1_show').style.display='initial';">
+		</i></h4>
 			<ul id="msif" style="display:none;">
 				<li>Fouille de données massives et visualisation</li>
 				<li>Analyse de données et modélisation probabilistique</li>
 				<li>Rédaction d'articles scientifiques</li>
 			</ul>
 			<h3><a href="http://www.enssat.fr/fr_FR/home"><img src="/ressources/logo_enssat.png" style="height: 2em; width: 5em; margin-right: 0.5em;"></a>
-			ENSSAT école d'ingénieur (2017-2020)
+			ENSSAT école d'ingénieur (2017-2020)</h3>
 
-			<i id="2_show" class="fa fa-arrow-circle-down" aria-hidden="true" onclick="document.getElementById('enssat').style.display='block';document.getElementById('2_hide').style.display='initial';document.getElementById('2_show').style.display='none';"></i> 
+			<p>
+				L'ENSSAT est l'école d'ingénieur dans laquelle je suis rentrée pour avoir mon diplôme d'ingénieur en informatique spécialisé en IA.
+			</p><p>
+				Dans cette école, j'ai étudié l'informatique, l'électronique, le réseau, la programmation web, la cyber sécurité, l'IA et de nombreux autres matières.
+				L'objectif de la formation étant de faire de nous des ingénieurs polyvalents.
+				La force de cette approche est que je ne suis pas cantonné à ma spécialisation et je peux comprendre les problèmes d'autres ingénieurs pour ainsi mieux travailler en équipe.
+			</p>
+			<h4 style="text-align: center;">Liste des cours suivis
+			<i id="2_show" class="fa fa-arrow-circle-down" aria-hidden="true" style="margin-left: 0.5em; cursor:pointer;"
+			title="Cliquez pour voir la liste des cours"
+			onclick="document.getElementById('enssat').style.display='block';
+					 document.getElementById('2_hide').style.display='initial';
+					 document.getElementById('2_show').style.display='none';"></i> 
+			<i id="2_hide" class="fa fa-arrow-circle-up" aria-hidden="true" style="display:none; margin-left: 0.5em; cursor:pointer;"
+			title="Cliquez pour cacher la liste des cours"
+			onclick="document.getElementById('enssat').style.display='none';
+					 document.getElementById('2_hide').style.display='none';
+					 document.getElementById('2_show').style.display='initial';"></i></h4>
+				
 
-			<i id="2_hide" class="fa fa-arrow-circle-up" aria-hidden="true" onclick="document.getElementById('enssat').style.display='none';document.getElementById('2_hide').style.display='none';document.getElementById('2_show').style.display='initial';" style="display:none;"></i></h3>
 			<ul id="enssat" style="display:none;">
 				<li><strong style="font-size: 1.5em;">Mathématiques :</strong></li>
 					<ul>
@@ -84,11 +125,26 @@ title: Cyril MOINEAU
 						<li>Bases des systèmes  numériques</li>
 					</ul>
 			</ul>
-		<h3><a href="http://www.lycee-pothier.com/"><img src="/ressources/pothier.jpg" style="height: 3.5em; width: 3.5em; margin-right: 0.5em;"></a>
+		<h3><a href="http://www.lycee-pothier.com/"><img src="/ressources/pothier.jpg" style="height: 3em; width: 3em; margin-right: 0.5em;"></a>
 		Classe préparatoire (2015-2017)
-		<i id="3_show" class="fa fa-arrow-circle-down" aria-hidden="true" onclick="document.getElementById('prep').style.display='block';document.getElementById('3_hide').style.display='initial';document.getElementById('3_show').style.display='none';"></i> 
-		<i id="3_hide" class="fa fa-arrow-circle-up" aria-hidden="true" onclick="document.getElementById('prep').style.display='none';document.getElementById('3_hide').style.display='none';document.getElementById('3_show').style.display='initial';" style="display:none;"></i></h3>
-			<ul id="prep" style="display:none;">
+		</h3>
+			<p>
+				Classe préparatoire aux grandes écoles Maths spé, Maths sup.
+			</p>
+		<h4 style="text-align: center;">Liste des cours suivis
+		<i id="3_show" class="fa fa-arrow-circle-down" aria-hidden="true" style="margin-left: 0.5em; cursor:pointer;"
+		title="Cliquez pour voir la liste des cours"
+		onclick="document.getElementById('prep').style.display='block';
+		document.getElementById('3_hide').style.display='initial';
+		document.getElementById('3_show').style.display='none';"></i> 
+		<i id="3_hide" class="fa fa-arrow-circle-up" aria-hidden="true" style="display:none; margin-left: 0.5em; cursor:pointer;"
+		title="Cliquez pour cacher la liste des cours"
+		onclick="document.getElementById('prep').style.display='none'; 
+		document.getElementById('3_hide').style.display='none';
+		document.getElementById('3_show').style.display='initial';"></i>
+		</h4>
+
+		<ul id="prep" style="display:none;">
 				<li><strong style="font-size: 1.5em;">Mathématiques :</strong></li>
 					<ul>
 						<li>Algèbre linéaire</li>
