Blog section looks better !

--- a/fr/index.html
+++ b/fr/index.html
@@ -28,17 +28,17 @@ title: Cyril MOINEAU
 
 		<p>
 			J'ai suivi le parcours classique pour devenir ingénieur, en faisant une classe préparatoire aux grandes écoles et en entrant dans une école d'ingénieur.
-			Je me suis spécializé dans le domaine de l'analyse de données, l'IA et la recherche.
-			Grâce à mon parcours, j'atteste de solide connaissance sur différents sujets ce qui fait ma flexibilité en tnat qu'ingénieur.
-			</p>
+			Je me suis spécialisé dans le domaine de l'analyse de données, l'IA et la recherche.
+			Grâce à mon parcours, j'atteste de solides connaissances sur différents sujets ce qui fait ma flexibilité en tant qu'ingénieur.
+		</p>
 		<h3><a href="https://www.univ-rennes1.fr/"><img src="/ressources/logo_ur1.png" style="height: 2em; width: 5em; margin-right: 0.5em;"></a>
-		Master Recherche en informatique Rennes 1 (2019-2020)</h3>
+		Master Recherche en Informatique Rennes 1 (2019-2020)</h3>
 
 		<p>
 		J'ai suivi la formation double diplôme de mon cursus d'ingénieur afin d'obtenir un diplôme de recherche en informatique.
-		Pendant cette formation, j'ai suivis des colloques sur "comment écrire un article scientifique", "la crise de la reproductibilité" etc ...
+		Pendant cette formation, j'ai assisté à de nombreux colloques tels que "comment écrire un article scientifique", "la crise de la reproductibilité".
 		</p><p>
-			Ce diplôme en parallèle de ma formation d'ingénieur en informatique m'a permis d'avoir des cours plus pointu dans le domaine de la fouille de donnée.
+			Ce diplôme en parallèle de ma formation d'ingénieur en informatique m'a permis d'avoir des cours plus pointus dans le domaine de la fouille de donnée.
 		</p>
 
 		<h4 style="text-align: center;">Liste des cours suivis
@@ -59,14 +59,15 @@ title: Cyril MOINEAU
 				<li>Rédaction d'articles scientifiques</li>
 			</ul>
 			<h3><a href="http://www.enssat.fr/fr_FR/home"><img src="/ressources/logo_enssat.png" style="height: 2em; width: 5em; margin-right: 0.5em;"></a>
-			ENSSAT école d'ingénieur (2017-2020)</h3>
+			Diplôme d'ingénieur informatique spécialité IA à l'ENSSAT Lannion (2017-2020)</h3>
 
 			<p>
-				L'ENSSAT est l'école d'ingénieur dans laquelle je suis rentrée pour avoir mon diplôme d'ingénieur en informatique spécialisé en IA.
+				J'ai suivi une formation d'ingénieur en informatique spécialisé en IA à l'ENSSAT Lannion.
 			</p><p>
-				Dans cette école, j'ai étudié l'informatique, l'électronique, le réseau, la programmation web, la cyber sécurité, l'IA et de nombreux autres matières.
-				L'objectif de la formation étant de faire de nous des ingénieurs polyvalents.
-				La force de cette approche est que je ne suis pas cantonné à ma spécialisation et je peux comprendre les problèmes d'autres ingénieurs pour ainsi mieux travailler en équipe.
+				Dans cette école, j'ai étudié l'informatique, l'électronique, le réseau, la programmation web, la cyber sécurité, l'IA et de nombreuses autres matières.
+				L'objectif de la formation était de faire de nous des ingénieurs polyvalents.
+				La force de cette approche est que je ne suis pas cantonné à ma spécialisation et je peux comprendre les enjeux des autres branches de l'ingénierie 
+				et ainsi mieux travailler en équipe.
 			</p>
 			<h4 style="text-align: center;">Liste des cours suivis
 			<i id="2_show" class="fa fa-arrow-circle-down" aria-hidden="true" style="margin-left: 0.5em; cursor:pointer;"
@@ -126,10 +127,10 @@ title: Cyril MOINEAU
 					</ul>
 			</ul>
 		<h3><a href="http://www.lycee-pothier.com/"><img src="/ressources/pothier.jpg" style="height: 3em; width: 3em; margin-right: 0.5em;"></a>
-		Classe préparatoire (2015-2017)
+		Classe préparatoire aux Lycée Pothier Orléans (2015-2017)
 		</h3>
 			<p>
-				Classe préparatoire aux grandes écoles Maths spé, Maths sup.
+				J'ai intégré la classe préparatoire aux grandes écoles Maths spé, Maths sup du lycée Pothier.
 			</p>
 		<h4 style="text-align: center;">Liste des cours suivis
 		<i id="3_show" class="fa fa-arrow-circle-down" aria-hidden="true" style="margin-left: 0.5em; cursor:pointer;"
