--- a/index.html
+++ b/index.html
@@ -26,20 +26,20 @@ title: Cyril MOINEAU
 		<h2>Education</h2>
 
 		<p>
-		I followed the classic french engineer circuit, from a preparatory class to an engineering school. 
-		I specialized my self in data science, AI and research.
-		With my curriculum, I gained knowledge on various topics and I believe it made me a more flexible engineer today. 
+		I have a typical French engineering educational background, going from a preparatory school to an engineering school. 
+		I specialized in data science, AI and research.
+		My well-rounded educational background made me gain knowledge on various topics, which I believe made me a more versatile engineer. 
 		</p>
 
 		
 		<h3><a href="https://international.univ-rennes1.fr/en"><img src="/ressources/logo_ur1.png" style="height: 2em; width: 5em; margin-right: 0.5em;"></a>
-			Master research Rennes 1 (2019-2020)
+			Master degree in research in computer science Rennes 1 (2019-2020)
 		</h3>
 			<p>
-			As part of my engineering diploma, I worked to get a second diploma to introduce my self to the field of research.
-			During this formation, I have followed various colloquium about "how to write a paper", "the reproductivity crisis" etc ...
+			I got a second diploma in <b>research in computer science</b>, in order to expand my knowledge in the field of research.
+			During this formation, I attended various colloquia on topics such as paper writing and crisis reproductivity.
 			</p><p>
-			This formation in conjunction with my major in AI allowed me to have a more in depth courses in the field of data science.
+			This formation in conjunction with my major in AI have allowed me to get more in-depth courses in the field of data science.
 			</p>
 
 			<h4 style="text-align: center;">List of courses
@@ -60,14 +60,15 @@ title: Cyril MOINEAU
 				<li>Writting of scientific publications</li>
 			</ul>
 		<h3><a href="http://www.enssat.fr/"><img src="/ressources/logo_enssat.png" style="height: 2em; width: 5em; margin-right: 0.5em;"></a>
-			ENSSAT (2017-2020)
+			Engineering diploma in computer science (AI) at ENSSAT Lannion (2017-2020)
 		</h3>
 			<p>
-			French engineering school I graduated from with the "Software and Computing engineering" diploma with a major in AI.
+			I graduated from ENSSAT Lannion, a French engineering school, with a <b>Software and Computing engineering diploma</b> with a major in AI.
 			</p><p>
-			In this school I studied computer science, electronics, network, web programation, cyber security, AI an many other topics.
-			The goal of the curriculum is to acquire a large tool-set. 
-			The strenght of this approach is that I have a major in AI, but I understand and talk with someone who work on systems on chips for exemple.
+			In this engineering school, I studied computer science, electronics, network, web programation, cyber security, AI and many other topics.
+			The goal of the curriculum was to acquire a large tool-set. 
+			The strength of this approach is that not only am I specialized in AI but I can also understand the issues at stake in the other engineering branches.
+			</p>
 			</p>
 			<h4 style="text-align: center;">List of courses
 
@@ -127,7 +128,7 @@ title: Cyril MOINEAU
 					</ul>
 			</ul>
 		<h3><a href="http://www.lycee-pothier.com/"><img src="/ressources/pothier.jpg" style="height: 3em; width: 3.5em; margin-right: 0.5em;"></a>
-			Preparatory classes (2015-2017)</h3>
+			Preparatory classes at Lycée Pothier Orléans(2015-2017)</h3>
 			<p>
 			Intensive Mathematics and Physics program for engineering schools in France.
 			</p>
