Update main page with education description.

--- a/index.html
+++ b/index.html
@@ -24,29 +24,39 @@ title: Cyril MOINEAU
 		</div>
 
 		<h2>Education</h2>
-		
-		<h3><a href="https://international.univ-rennes1.fr/en" style="on;"><img src="/ressources/logo_ur1.png" style="height: 2em; width: 5em; margin-right: 0.5em;"></a>
-			Master research Rennes 1 (2019-2020)
-			<i id="1_show" class="fa fa-arrow-circle-down" aria-hidden="true" style="margin-left: 0.5em;"
-			onclick="document.getElementById('msif').style.display='block';document.getElementById('1_hide').style.display='initial';document.getElementById('1_show').style.display='none';"></i> 
 
-			<i id="1_hide" class="fa fa-arrow-circle-up" aria-hidden="true" style="display:none; margin-left: 0.5em;"
-			onclick="document.getElementById('msif').style.display='none';document.getElementById('1_hide').style.display='none';document.getElementById('1_show').style.display='initial';" ></i></h3>
-			<ul id="msif" style="display:none;">
-				<li>Data mining and visualisation</li>
-				<li>Data analysis and probabilistic modeling</li>
-				<li>Writting of scientific publications</li>
-			</ul>
+		<p>
+		I have a typical French engineering educational background, going from a preparatory school to an engineering school. 
+		I specialized in data science, AI and research.
+		My well-rounded educational background made me gain knowledge on various topics, which I believe made me a more versatile engineer. 
+		</p>
+
 		<h3><a href="http://www.enssat.fr/"><img src="/ressources/logo_enssat.png" style="height: 2em; width: 5em; margin-right: 0.5em;"></a>
-			ENSSAT (2017-2020)
+			Engineering diploma in Computer Science (AI) - ENSSAT Lannion (2017-2020)
+		</h3>
+			<p>
+			I graduated from ENSSAT Lannion, a French engineering school, with a <b>Software and Computing engineering diploma</b> specializing in AI.
+			</p><p>
+			At this engineering school, I studied computer science, electronics, network, web programation, cyber security, AI and many other topics.
+			The goal of the curriculum was to acquire a large skill set. 
+			The strength of this approach is that not only am I specialized in AI but I can also understand the issues at stake in other engineering fields.
+			</p>
+			</p>
+			<h4 style="text-align: center;">List of courses
 
-			<i id="2_show" class="fa fa-arrow-circle-down" aria-hidden="true" style="margin-left: 0.5em;"
-			onclick="document.getElementById('enssat').style.display='block';document.getElementById('2_hide').style.display='initial';document.getElementById('2_show').style.display='none';"></i> 
-
-			<i id="2_hide" class="fa fa-arrow-circle-up" aria-hidden="true" style="display:none; margin-left: 0.5em;"
-			onclick="document.getElementById('enssat').style.display='none';document.getElementById('2_hide').style.display='none';document.getElementById('2_show').style.display='initial';"></i></h3>
+			<i id="2_show" class="fa fa-arrow-circle-down" aria-hidden="true" style="margin-left: 0.5em; cursor:pointer;"
+			title="Click to show the list of courses"
+			onclick="document.getElementById('enssat').style.display='block';
+					 document.getElementById('2_hide').style.display='initial';
+					 document.getElementById('2_show').style.display='none';"></i> 
+			<i id="2_hide" class="fa fa-arrow-circle-up" aria-hidden="true" style="display:none; margin-left: 0.5em; cursor:pointer;"
+			title="Click to hide the list of courses"
+			onclick="document.getElementById('enssat').style.display='none';
+					 document.getElementById('2_hide').style.display='none';
+					 document.getElementById('2_show').style.display='initial';"></i>
+			</h4>
 			<ul id="enssat" style="display:none;">
-				<li><strong style="font-size: 1.5em;">Mathematics :</strong></li>
+				<li><strong style="font-size: 1em;">Mathematics :</strong></li>
 					<ul>
 						<li>Mathematical logic</li>
 						<li>Analysis</li>
@@ -57,7 +67,7 @@ title: Cyril MOINEAU
 						<li>Theory of queues</li>
 						<li>Cryptography</li>
 					</ul>
-				<li><strong style="font-size: 1.5em;">Computer science :</strong></li>
+				<li><strong style="font-size: 1em;">Computer science :</strong></li>
 					<ul>
 						<li>Networking</li>
 						<li>Operating System</li>
@@ -83,21 +93,60 @@ title: Cyril MOINEAU
 						<li>Big data mining and analysis (semantic web)</li>
 						<li>Automatic processing of languages and speech</li>
 					</ul>
-				<li><strong style="font-size: 1.5em;">Electronics :</strong></li>
+				<li><strong style="font-size: 1em;">Electronics :</strong></li>
 					<ul>
 						<li>Microcontrollers</li>
 						<li>Basic digital systems</li>
 					</ul>
 			</ul>
-		<h3><a href="http://www.lycee-pothier.com/"><img src="/ressources/pothier.jpg" style="height: 3.5em; width: 3.5em; margin-right: 0.5em;"></a>
-			Preparatory classes (2015-2017)
-			<i id="3_show" class="fa fa-arrow-circle-down" aria-hidden="true" style="margin-left: 0.5em;"
-			onclick="document.getElementById('prep').style.display='block';document.getElementById('3_hide').style.display='initial';document.getElementById('3_show').style.display='none';"></i> 
-			<i id="3_hide" class="fa fa-arrow-circle-up" aria-hidden="true" style="display:none; margin-left: 0.5em;"
-			onclick="document.getElementById('prep').style.display='none';document.getElementById('3_hide').style.display='none';document.getElementById('3_show').style.display='initial';"></i></h3>
-			
+
+		<h3><a href="https://international.univ-rennes1.fr/en"><img src="/ressources/logo_ur1.png" style="height: 2em; width: 5em; margin-right: 0.5em;"></a>
+			Master's degree in Computer Science Research - Rennes 1 (2019-2020)
+		</h3>
+			<p>
+			I got a second diploma in <b>computer science research</b> in order to expand my knowledge in the field of research.
+			During this time, I attended various academic conferences on topics such as paper writing and reproducibility crisis.
+			</p><p>
+			This degree along with my specialization in AI allowed me to gain more in-depth insight into the field of data science.
+			</p>
+
+			<h4 style="text-align: center;">List of courses
+			<i id="1_show" class="fa fa-arrow-circle-down" aria-hidden="true" style="margin-left: 0.5em; cursor:pointer;"
+			title="Click to show the list of courses"
+			onclick="document.getElementById('msif').style.display='block';
+						document.getElementById('1_hide').style.display='initial';
+						document.getElementById('1_show').style.display='none';"></i> 
+			<i id="1_hide" class="fa fa-arrow-circle-up" aria-hidden="true" style="display:none; margin-left: 0.5em; cursor:pointer;"
+			title="Click to hide the list of courses"
+			onclick="document.getElementById('msif').style.display='none';
+						document.getElementById('1_hide').style.display='none';
+						document.getElementById('1_show').style.display='initial';"></i>
+			</h4>
+			<ul id="msif" style="display:none;">
+				<li>Data mining and visualisation</li>
+				<li>Data analysis and probabilistic modeling</li>
+				<li>Writting of scientific publications</li>
+			</ul>
+
+		<h3><a href="http://www.lycee-pothier.com/"><img src="/ressources/pothier.jpg" style="height: 3em; width: 3.5em; margin-right: 0.5em;"></a>
+			Preparatory classes - Lycée Pothier Orléans (2015-2017)</h3>
+			<p>
+			Intensive Mathematics and Physics program in preparation for French engineering schools.
+			</p>
+			<h4 style="text-align: center;">List of courses
+			<i id="3_show" class="fa fa-arrow-circle-down" aria-hidden="true" style="margin-left: 0.5em; cursor:pointer;"
+			title="Click to show the list of courses"
+			onclick="document.getElementById('prep').style.display='block';
+					 document.getElementById('3_hide').style.display='initial';
+					 document.getElementById('3_show').style.display='none';"></i> 
+			<i id="3_hide" class="fa fa-arrow-circle-up" aria-hidden="true" style="display:none; margin-left: 0.5em; cursor:pointer;"
+			title="Click to hide the list of courses"
+			onclick="document.getElementById('prep').style.display='none';
+					 document.getElementById('3_hide').style.display='none';
+					 document.getElementById('3_show').style.display='initial';"></i>
+			</h4>
 			<ul id="prep" style="display:none;">
-				<li><strong style="font-size: 1.5em;">Mathematics :</strong></li>
+				<li><strong style="font-size: 1em;">Mathematics :</strong></li>
 					<ul>
 						<li>Linear algebra</li>
 						<li>Normed vectorial space in finite dimension</li>
@@ -106,7 +155,7 @@ title: Cyril MOINEAU
 						<li>Probability</li>
 						<li>Diffential calculus</li>
 					</ul>
-				<li><strong style="font-size: 1.5em;">Physics :</strong></li>
+				<li><strong style="font-size: 1em;">Physics :</strong></li>
 					<ul>
 						<li>Non-linear optics</li>
 						<li>Electromagnetism</li>
@@ -114,14 +163,14 @@ title: Cyril MOINEAU
 						<li>Thermodynamic</li>
 						<li>Wave physics</li>
 					</ul>
-				<li><strong style="font-size: 1.5em;">Chemistry :</strong></li>
+				<li><strong style="font-size: 1em;">Chemistry :</strong></li>
 					<ul>
 						<li>Mixtures and transformations: thermodynamic aspects</li>
 						<li>Chemical energy and electrical energy: conversion and storage</li>
 						<li>Atoms, molecules, complexes: quantum modeling and reactivity</li>
 						<li>Molecules and organic materials: synthesis strategy and applications</li>
 					</ul>
-				<li><strong style="font-size: 1.5em;">Computer science :</strong></li>
+				<li><strong style="font-size: 1em;">Computer science :</strong></li>
 					<ul>
 						<li>Introduction to Python</li>
 						<li>Introduction to data base (mySQL)</li>
