--- a/404.html
+++ b/404.html
@@ -6,6 +6,6 @@ layout: 404
 <div class="container">
   <h1 style="border-top: 4px double; padding-top: 0.5em;">404 : Page not found</h1>
   <h2 style="border-bottom: 4px double; padding-bottom: 1em;">
-    You can go back to the main page by clicking <a  href="index.html">here</a>.
+    You can go back to the main page by clicking <a  href="/index.html">here</a>.
   </h2>
 </div>
