Changing languages is know handled by jekyll instead of javascript.

--- a/pages/en/home.html
+++ b/pages/en/home.html
@@ -1,6 +1,9 @@
 ---
-layout: default
+layout: en
 title: Cyril MOINEAU
+lang: en
+ref: home
+permalink: /
 ---
 	<div class="blurb">    
 		<div id="presentation">
