--- a/pages/en/projects.html
+++ b/pages/en/projects.html
@@ -1,6 +1,9 @@
 ---
-layout: default
-title: Cyril MOINEAU
+layout: en
+title: Projects
+lang: en
+ref: projects
+permalink: /projects
 ---
 	<div class="blurb">
 		<h1>My projects</h1>
