--- a/pages/en/work_experience.html
+++ b/pages/en/work_experience.html
@@ -1,6 +1,9 @@
 ---
-layout: default
-title: Cyril MOINEAU
+layout: en
+title: Work Experiences
+lang: en
+ref: work
+permalink: /work_experiences
 ---
 	<div class="blurb">        
 		<h1>My work experiences</h1>
