--- a/pages/fr/home.html
+++ b/pages/fr/home.html
@@ -1,6 +1,9 @@
 ---
-layout: french
+layout: fr
 title: Cyril MOINEAU
+lang: fr
+ref: home
+permalink: /fr
 ---
 	<div class="blurb">
 		<div id="presentation">
