--- a/pages/fr/index.html
+++ b/pages/fr/index.html
@@ -1,6 +1,9 @@
 ---
-layout: french
-title: Cyril MOINEAU
+layout: fr
+title: Work Experiences
+lang: fr
+ref: work
+permalink: /work_experiences/fr
 ---
 	<div class="blurb">
 		<h1>Mon expérience professionnelle</h1>
