--- a/pages/fr/projects.html
+++ b/pages/fr/projects.html
@@ -1,6 +1,9 @@
 ---
-layout: french
-title: Cyril MOINEAU
+layout: fr
+title: Projets
+lang: fr
+ref: projects
+permalink: /projects/fr
 ---
 	<div class="blurb">
 		<h1>Mes projets</h1>
