Animation update ! Update evrywhere !

--- a/pages/en/home.html
+++ b/pages/en/home.html
@@ -49,15 +49,17 @@ permalink: /
 			<i id="1_show" class="fa fa-arrow-circle-down" aria-hidden="true" style="margin-left: 0.5em; cursor:pointer;"
 			title="Click to show the list of courses"
 			onclick="document.getElementById('msif').style.display='block';
+					 document.getElementById('msif').style.animation='fadein 1s ease';
 					 document.getElementById('1_hide').style.display='initial';
 					 document.getElementById('1_show').style.display='none';"></i> 
 			<i id="1_hide" class="fa fa-arrow-circle-up" aria-hidden="true" style="display:none; margin-left: 0.5em; cursor:pointer;"
 			title="Click to hide the list of courses"
-			onclick="document.getElementById('msif').style.display='none';
+			onclick="document.getElementById('msif').style.animation='fadeout 1s ease';
+					 setTimeout(function(){document.getElementById('msif').style.display='none';}, 1000);
 					 document.getElementById('1_hide').style.display='none';
 					 document.getElementById('1_show').style.display='initial';"></i>
 			</h4>
-			<ul id="msif" style="display:none;">
+			<ul id="msif" class="reveal" style="display:none;">
 				<li>Data mining and visualisation</li>
 				<li>Data analysis and probabilistic modeling</li>
 				<li>Writting of scientific publications</li>
@@ -78,15 +80,17 @@ permalink: /
 			<i id="2_show" class="fa fa-arrow-circle-down" aria-hidden="true" style="margin-left: 0.5em; cursor:pointer;"
 			title="Click to show the list of courses"
 			onclick="document.getElementById('enssat').style.display='block';
+					 document.getElementById('enssat').style.animation='fadein 1s ease';
 					 document.getElementById('2_hide').style.display='initial';
 					 document.getElementById('2_show').style.display='none';"></i> 
 			<i id="2_hide" class="fa fa-arrow-circle-up" aria-hidden="true" style="display:none; margin-left: 0.5em; cursor:pointer;"
 			title="Click to hide the list of courses"
-			onclick="document.getElementById('enssat').style.display='none';
+			onclick="document.getElementById('enssat').style.animation='fadeout 1s ease';
+					 setTimeout(function(){document.getElementById('enssat').style.display='none';}, 1000);
 					 document.getElementById('2_hide').style.display='none';
 					 document.getElementById('2_show').style.display='initial';"></i>
 			</h4>
-			<ul id="enssat" style="display:none;">
+			<ul id="enssat" class="reveal" style="display:none;">
 				<li><strong style="font-size: 1em;">Mathematics :</strong></li>
 					<ul>
 						<li>Mathematical logic</li>
@@ -139,15 +143,17 @@ permalink: /
 			<i id="3_show" class="fa fa-arrow-circle-down" aria-hidden="true" style="margin-left: 0.5em; cursor:pointer;"
 			title="Click to show the list of courses"
 			onclick="document.getElementById('prep').style.display='block';
+					 document.getElementById('prep').style.animation='fadein 1s ease';
 					 document.getElementById('3_hide').style.display='initial';
 					 document.getElementById('3_show').style.display='none';"></i> 
 			<i id="3_hide" class="fa fa-arrow-circle-up" aria-hidden="true" style="display:none; margin-left: 0.5em; cursor:pointer;"
 			title="Click to hide the list of courses"
-			onclick="document.getElementById('prep').style.display='none';
+			onclick="document.getElementById('prep').style.animation='fadeout 1s ease';
+					 setTimeout(function(){document.getElementById('prep').style.display='none';}, 1000);
 					 document.getElementById('3_hide').style.display='none';
 					 document.getElementById('3_show').style.display='initial';"></i>
 			</h4>
-			<ul id="prep" style="display:none;">
+			<ul id="prep" class="reveal" style="display:none;">
 				<li><strong style="font-size: 1em;">Mathematics :</strong></li>
 					<ul>
 						<li>Linear algebra</li>
