--- a/pages/en/projects.html
+++ b/pages/en/projects.html
@@ -12,8 +12,8 @@ permalink: /projects
     		<li><a href="#Ada">Ada Lovelace & Hackathon ENSSAT  2019</a></li>
         	<li><a href="#BomberBall">BomberBall</a></li>
     	</ul>
-	<div class="box">
-    	<h2 id="Ada">Ada Lovelace & Hacakthon ENSSAT (2019)</h2>
+	<div class="box" id="Ada">
+    	<h2>Ada Lovelace & Hacakthon ENSSAT (2019)</h2>
     		<p>
     			During my 2nd year at <a href="http://www.enssat.fr/">ENSSAT</a>, I worked on two projects with the same team of students. These projects revolved around fulfilling a challenge in programming. Bellow, you will find a description of both projects.
     		</p>
@@ -69,8 +69,8 @@ permalink: /projects
 		    		
 		    	</ul>
 	</div>
-	<div class="box">
-    	<h2 id="BomberBall">BomberBall</h2>
+	<div class="box" id="BomberBall">
+    	<h2>BomberBall</h2>
     		<p>
     			Bomber Ball was an important project for software engineering course. During this project, we were role playing a company and the professors were playing the client. 
     			During this project we respond to a call for tender, and create various meetings with our fictive company in order to respond to the fictive client's demand. The company wanted to create a video game similar to the Bomber Man. We had to code the game in Java since it was the language we used the most in junior year at ENSSAT.
