--- a/pages/fr/projects.html
+++ b/pages/fr/projects.html
@@ -12,8 +12,8 @@ permalink: /projects/fr
     		<li><a href="#Ada">Ada Lovelace & Hackathon ENSSAT  2019</a></li>
         	<li><a href="#BomberBall">BomberBall</a></li>
     	</ul>
-	<div class="box">
-    	<h2 id="Ada">Ada Lovelace & Hacakthon ENSSAT (2019)</h2>
+	<div class="box" id="Ada">
+    	<h2>Ada Lovelace & Hacakthon ENSSAT (2019)</h2>
     		<p>
     			Pendant ma seconde année à l'<a href="http://www.enssat.fr/">ENSSAT</a>, j'ai travaillé sur deux projets avec la même équipe d'étudiants. Ces projets s'orientaient tous deux vers l'organisation d'un concours de programmation. Vous trouverez ci-dessous une description de chaque projet, ainsi que ma contribution.
     		</p>
@@ -71,8 +71,8 @@ permalink: /projects/fr
 		    		
 		    	</ul>
 	</div>
-	<div class="box">
-    	<h2 id="BomberBall">Projet BomberBall</h2>
+	<div class="box" id="BomberBall">
+    	<h2>Projet BomberBall</h2>
     		<p>
     			Le projet Bomberball est un projet de Génie Logiciel. C'est l'un des projets les plus ambitieux de mes années à l'ENSSAT. Lors de ce projet, nous faisions un jeu de rôle avec les enseignants. Nous représentions une entreprise et les enseignants nos clients.
     			Lors de ce projet, nous avons répondu à un appel d'offre et avons organisé de nombreuses réunions pour comprendre les besoins du client. L'appel d'offre décrivait un jeu similaire au jeu Bomber Man. Nous avons codé ce jeu en Java car c'était le langage que nous maîtrisions le plus en 2ème année.
